--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,14 @@
 <nav class="main-nav">
-    {% if page.url != "/" %}
-        <a href="{{ "/" | relative_url  }}"> <span class="arrow">←</span> Home </a>
+    {% if page.url != "/index.html" %}
+        <a href="{{ site.baseurl }}/"> <span class="arrow">←</span> Home </a>
     {% endif %}
 
-    {% if page.url != "/about/" %}
-        <a href="{{ "/" | relative_url  }}about">About </a>
-    {% endif %}
-    <a class="cta" href="{{ "/" | relative_url  }}feed.xml">Subscribe</a>
+	{% assign sorted_pages = site.pages | sort: "order" %}
+	{% for page in sorted_pages %}
+		{% if page.title %}
+			<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+		{% endif %}
+	{% endfor %}
+		
+    <a class="cta" href="{{ site.baseurl }}/feed.xml">RSS</a>
 </nav>
