--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,8 +1,11 @@
 <ul id="post-list">
     {% for post in paginator.posts %}
-        <li>
-            <a href="{{ "/" | relative_url  }}{{ post.url | remove_first: '/' }}"><aside class="dates">{{ post.date | date:"%b %d" }}</aside></a>
-            <a href="{{ "/" | relative_url  }}{{ post.url | remove_first: '/' }}">{{ post.title }} <h2>{{ post.description }}</h2></a>
+        <li class="h-entry">
+            <a href="{{ site.baseurl }}/{{ post.url | remove_first: '/' }}" class="u-url"><aside class="dates"><time datetime="{{ post.date }}" class="dt-published">{{ post.date | date:"%I:%M %p, %b %d" }}</time></aside></a>
+			{% if post.microblog == false %}
+				<h1><a href="{{ site.baseurl }}/{{ post.url | remove_first: '/' }}">{{ post.title }}</a></h1>
+			{% endif %}
+            <a href="{{ site.baseurl }}/{{ post.url | remove_first: '/' }}"><h2 class="e-content">{{ post.content | strip_html }}</h2></a>
         </li>
     {% endfor %}
 </ul>
