--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -2,11 +2,11 @@
     <section id="wrapper">
         <header id="header">
         {% if site.aboutPage %}
-            <a href="{{ "/" | relative_url  }}about">
-                <img id="avatar" class="2x" src="{{ "/" | relative_url  }}assets/images/avatar.png"/>
+            <a href="{{ site.baseurl }}/about/">
+                <img id="avatar" class="2x" src="{{ site.avatar }}" />
             </a>
         {% else %}
-            <img id="avatar" class="2x" src="{{ "/" | relative_url  }}assets/images/avatar.png"/>
+			<img id="avatar" class="2x" src="{{ site.avatar }}" />
         {% endif %}
             <h1>{{ site.author }}</h1>
             <h2>{{ site.description }}</h2>
