--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,5 +1,5 @@
 <ul id="post-list">
-    {% for post in paginator.posts %}
+    {% for post in site.posts limit:25 %}
         <li class="h-entry">
             <a href="{{ site.baseurl }}/{{ post.url | remove_first: '/' }}" class="u-url"><aside class="dates"><time datetime="{{ post.date }}" class="dt-published">{{ post.date | date:"%I:%M %p, %b %d" }}</time></aside></a>
 			{% if post.microblog == false %}
@@ -9,7 +9,3 @@
         </li>
     {% endfor %}
 </ul>
-
-{% if paginator.previous_page or paginator.next_page %}
-    {% include pagination.html %}
-{% endif %}
