--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/custom.css">
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  {% if site.podcast %}
+  <link rel="alternate" type="application/rss+xml" title="Podcast" href="{{ "/podcast.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  {% endif %}
   <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
   <link rel="EditURI" type="application/rsd+xml" href="{{ site.baseurl }}/rsd.xml" />
 
@@ -25,8 +28,8 @@
   {% if site.instagram_username != "" %}
   	<link rel="me" href="https://instagram.com/{{ site.instagram_username }}" />
   {% endif %}
-  <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
-  <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
+  <link rel="authorization_endpoint" href="https://micro.blog/indieauth/auth" />
+  <link rel="token_endpoint" href="https://micro.blog/indieauth/token" />
   <link rel="micropub" href="https://micro.blog/micropub" />
   <link rel="webmention" href="https://micro.blog/webmention" />
   <link rel="subscribe" href="https://micro.blog/users/follow" />
@@ -47,6 +50,8 @@
   <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   <script src="{{ site.baseurl }}/assets/js/highlight.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
+
+  {% include custom_footer.html %}
 </body>
 </html>
 
