--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <article class="post h-entry">
     <header>
 		<h1>{{ .Title }}</h1>
-        <h2 class="headline"><time class="dt-published" datetime="{{ .Date }}">{{ .Date.Format "Jan 2, 2006" }}</time></h2>
+        <h2 class="headline"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time></h2>
     </header>
     <section id="post-body e-content">
         {{ .Content }}
