Updated with Microsub and avatar photo improvements.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
 </article>
 <footer id="post-meta" class="clearfix">
     <a href="https://micro.blog/{{ .Site.Author.username }}">
-        <img class="avatar" src="{{ .Site.Author.avatar }}" />
+        <img class="avatar" src="{{ .Site.Author.avatar }}" width="96" height="96" />
         <div>
             <span class="dark">{{ .Site.Author.username }}</span>
             <span>{{ .Site.Author.name }}</span>
