--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -2,7 +2,7 @@
     <section id="wrapper">
         <header id="header">
             <a href="{{ "about/" | relURL }}">
-                <img id="avatar" class="2x" src="{{ .Site.Author.avatar }}" />
+                <img id="avatar" class="2x" src="{{ .Site.Author.avatar }}" width="96" height="96" />
             </a>
             <h1>{{ .Site.Author.name }}</h1>
             <h2>{{ .Site.Params.description | safeHTML }}</h2>
