--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -1,10 +1,10 @@
 <ul id="post-list">
 
-{{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 10) }}
+{{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
 {{ range $paginator.Pages  }}
 
         <li class="h-entry">
-            <a href="{{ .Permalink }}" class="u-url"><aside class="dates"><time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">{{ .Date.Format "3:04 AM, Jan 2" }}</time></aside></a>
+            <a href="{{ .Permalink }}" class="u-url"><aside class="dates"><time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">{{ .Date.Format "3:04 PM, Jan 2" }}</time></aside></a>
 			{{ if .Title }}
 				<h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
 			{{ end }}
