--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,3 +6,7 @@
 <script src="{{ "assets/js/main.js" | relURL }}"></script>
 <script src="{{ "assets/js/highlight.js" | relURL }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+
+{{ range .Site.Params.plugins_js }}
+    <script src="{{ . }}"></script>
+{{ end }}
