--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -2,7 +2,7 @@
 <article class="post h-entry">
     <header>
 		{{ if .Title }}
-			<h1>{{ .Title }}</h1>
+			<h1 class="p-name">{{ .Title }}</h1>
 		{{ end }}
         <h2 class="headline"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time></h2>
     </header>
