--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -6,7 +6,7 @@
 		{{ end }}
         <h2 class="headline"><a href="{{ .Permalink }}" class="u-url"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time></a></h2>
     </header>
-    <section id="post-body e-content">
+    <section id="post-body" class="e-content">
         {{ .Content }}
     </section>
 </article>
