Make links in headline less eye-catching.

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -251,6 +251,10 @@ em, i { font-style: italic; }
 	  display: inline-block;
 }
 
+.post h2.headline a {
+	color: #b2b9be;
+}
+
 #post-list h2 {
 	font: normal 17px/1.5em "Helvetica Neue",Helvetica,Arial,sans-serif;
 	color: #aaa;
