--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -1,6 +1,6 @@
 <ul id="post-list">
 
-{{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
+{{ $paginator := .Paginate (where .Site.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
 {{ range $paginator.Pages  }}
 
         <li class="h-entry">
