Add missing h-feed and p-name.

--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -1,4 +1,4 @@
-<ul id="post-list">
+<ul id="post-list" class="h-feed">
 
 {{ $paginator := .Paginate (where .Site.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
 {{ range $paginator.Pages  }}
@@ -6,7 +6,7 @@
         <li class="h-entry">
             <a href="{{ .Permalink }}" class="u-url"><aside class="dates"><time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">{{ .Date.Format "3:04 PM, Jan 2" }}</time></aside></a>
 			{{ if .Title }}
-				<h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+				<h1><a href="{{ .Permalink }}" class="p-name">{{ .Title }}</a></h1>
 			{{ end }}
             <a href="{{ .Permalink }}"><h2 class="e-content">{{ .Content }}</h2></a>
         </li>
