--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -186,7 +186,7 @@ ul 	{ margin:0; padding:0; }
 li	{ list-style-type:circle; list-style-position:inside; }
 
 /* Line Height */
-#post-body, p { line-height:1.7; font-size: 120%; }
+p { line-height:1.7; font-size: 120%; }
 
 b, strong { font-weight: 500;
   color: #1E2025; }
