--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -1,6 +1,7 @@
 <ul id="post-list" class="h-feed">
 
-{{ $paginator := .Paginate (where .Site.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
+{{ $pages := cond .IsHome .Site.Pages .Pages }}
+{{ $paginator := .Paginate (where $pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
 {{ range $paginator.Pages  }}
 
         <li class="h-entry">
